--- a/packages/transpiler/babel-inula-next-core/package.json
+++ b/packages/transpiler/babel-inula-next-core/package.json
@@ -14,8 +14,8 @@
     "dist"
   ],
   "type": "module",
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
+  "main": "src/index.ts",
+  "module": "src/index.ts",
   "typings": "dist/index.d.ts",
   "scripts": {
     "build": "tsup --sourcemap",
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/babel__core": "^7.20.5",
     "@types/node": "^20.10.5",
+    "sinon": "^18.0.0",
     "tsup": "^6.7.0",
     "typescript": "^5.3.2"
   },
@@ -37,14 +38,14 @@
     "@babel/plugin-syntax-typescript": "^7.23.3",
     "@babel/traverse": "^7.24.1",
     "@babel/types": "^7.24.0",
+    "@openinula/babel-api": "workspace:*",
+    "@openinula/jsx-view-parser": "workspace:*",
     "@openinula/reactivity-parser": "workspace:*",
     "@openinula/view-parser": "workspace:*",
     "@types/babel-types": "^7.0.15",
     "@types/babel__generator": "^7.6.8",
     "@types/babel__parser": "^7.1.1",
     "@types/babel__traverse": "^7.6.8",
-    "@openinula/jsx-view-parser": "workspace:*",
-    "@openinula/babel-api": "workspace:*",
     "minimatch": "^9.0.3",
     "vitest": "^1.4.0"
   },
