--- a/packages/transpiler/jsx-parser/package.json
+++ b/packages/transpiler/jsx-parser/package.json
@@ -13,7 +13,7 @@
     "dist"
   ],
   "type": "module",
-  "main": "dist/index.cjs",
+  "main": "src/index.ts",
   "module": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
@@ -38,6 +38,7 @@
       "esm"
     ],
     "clean": true,
-    "dts": true
+    "dts": true,
+    "sourceMap": true
   }
 }
