--- a/packages/transpiler/view-generator/package.json
+++ b/packages/transpiler/view-generator/package.json
@@ -14,7 +14,7 @@
     "dist"
   ],
   "type": "module",
-  "main": "dist/index.cjs",
+  "main": "dist/index.js",
   "module": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
